--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <!-- This is a regular single column item -->
         <div class="box-item">
-            <img src="headshot.jpg" alt="Profesional headshot">
+            <img src="headshot.JPG" alt="Profesional headshot">
             <h2>About Me</h2>
             <p>I grew up in the suburbs of Chicago. After high school graduation, my family and I relocated to South Carolina, this prompted my decision to attend Clemson University. Currently pursuing a Bachelor of Science with a major in Electrical Engineering,
                 I am deeply passionate about the design and engineering processes that shape our everyday technology. </p>
@@ -50,7 +50,7 @@
 
 
         <!-- Another regular single column item -->
-        <div class="box-item box-item--long" id="clemson">
+        <div class="box-item" id="clemson">
             <h2>Clemson University</h2>
             <p>-I am currently working on a Bachelor of Science in high level programming and circuit design classes, majoring in Electrical Engineering, graduating in the spring of 2024.
             </p>
@@ -70,7 +70,7 @@
             </p>
         </div>
 
-        <div class="box-item box-item--long">
+        <div class="box-item">
             <h2>Programming</h2>
             <p>I've been programming for a total of 5+ years and have used many resources to enhance this skill, the programming languages I would say I'm proficent in are C, C#, C++, Python, HTML, CSS, and MatLab. I've take multiple classes at <a href="#clemson">Clemson University</a>                that enhanced my knowledge of these languages, My team and I used MatLab programming in <a href="#design1">Senior Design Project 1</a>. which we also linked with simulink. Furthermore I completed a wide variety of LinkedIn learning classes
                 in multiple programming languages that include; Python, C++, and machine learning.
