--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 
         <!-- This item will span two columns -->
-        <div class="box-item box-item--long">
+        <div class="box-item box-item--long" id="Atlas">
             <h1>Work Experience</h1>
             <h2>Atlas Copco (Engineering Intern)</h2>
             <p>- I completed an internship with Atlas Copco's Product Company as an Electrical Engineering Intern. During this internship, I worked with the electrical engineering team and collaborated with a couple of other individuals on challenging projects
@@ -52,6 +52,7 @@
         <!-- Another regular single column item -->
         <div class="box-item" id="clemson">
             <h2>Clemson University</h2>
+            <img src="Clemson_Paw.png" alt="Picture of Clemson Paw">
             <p>-I am currently working on a Bachelor of Science in high level programming and circuit design classes, majoring in Electrical Engineering, graduating in the spring of 2024.
             </p>
             <p>
@@ -61,21 +62,43 @@
 
 
 
-        <div class="box-item" id="design1">
+        <div class="box-item box-item--tall" id="design1">
             <h2>Senior Design I</h2>
             <img src="seniordesign_1.png" alt="Senior Design picture ">
             <p>
                 For this project a group of ECE students and myself were assigned to work together in creating an automatic connect 4 board using an arduino and some motors. This project taught me alot of things including; Working with electrical components, simulink
                 control systems, power conversion from AC to DC, and so much more.
             </p>
+            <a href="Senior_Design_1(Bradley).pdf" download>
+                <img src="cadfile_design_1.png" alt="autocad">
+            </a>
+            <p>
+                During my time at <a href="#Atlas">Atlas CopCo</a>, I worked on circuit and harness designs using AutoCad. This is an example of how I used that knowledge for my senior design project, this is an example of a point to point drawing for
+                each connection in the design also equiped with a build of materials.
+            </p>
         </div>
 
         <div class="box-item">
             <h2>Programming</h2>
             <p>I've been programming for a total of 5+ years and have used many resources to enhance this skill, the programming languages I would say I'm proficent in are C, C#, C++, Python, HTML, CSS, and MatLab. I've take multiple classes at <a href="#clemson">Clemson University</a>                that enhanced my knowledge of these languages, My team and I used MatLab programming in <a href="#design1">Senior Design Project 1</a>. which we also linked with simulink. Furthermore I completed a wide variety of LinkedIn learning classes
-                in multiple programming languages that include; Python, C++, and machine learning.
+                in multiple programming languages that include; C++, JavaScript, and Python which included libraries that involve machine learning.
             </p>
         </div>
+
+        <div class="box-item">
+            <h2>AutoCad</h2>
+            <p>
+            </p>
+        </div>
+
+        <div class="box-item">
+            <h2>Coming Soon</h2>
+            <p>
+            </p>
+        </div>
+
+
+
 
         <!-- More items can be added as needed -->
     </div>
