--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
             <h2>Atlas Copco (Engineering Intern)</h2>
             <p>- I completed an internship with Atlas Copco's Product Company as an Electrical Engineering Intern. During this internship, I worked with the electrical engineering team and collaborated with a couple of other individuals on challenging projects
                 that required me to think like an engineer in my approach.</p>
-            <p>-I was responsible for reviewing and improving harness designs for road light harnesses. The goal was to make it easier for suppliers to understand the construction requirements and create a standardized drawing process for future road light
-                harnesses. I also played a role in organizing the broken unit supply data by developing a process for proper data input, search, and editing to enhance usability. To achieve this, I created VBA macros and user forms windows to streamline
-                the experience and make it more intuitive. </p>
+            <p>-I was responsible for reviewing and improving harness designs for road light harnesses using <a href="#AutoCAD">AutoCAD</a> software. The goal was to make it easier for suppliers to understand the construction requirements and create a standardized
+                drawing process for future road light harnesses. I also played a role in organizing the broken unit supply data by developing a process for proper data input, search, and editing to enhance usability. To achieve this, I created VBA macros
+                and user forms windows to streamline the experience and make it more intuitive. </p>
             <h2>EPS FloTek, LLC (Engineering Intern)</h2>
             <p>-Worked in an intern position learning basic computational and fluid dynamics, working with programs such as Moldex3D, Rhinoceros, and Solid Works to help solve issues such as heating, warping, cracking, etc. in different plastic molds.
             </p>
@@ -85,15 +85,23 @@
             </p>
         </div>
 
-        <div class="box-item">
-            <h2>AutoCad</h2>
+        <div class="box-item" id="AutoCAD">
+            <h2>AutoCAD</h2>
             <p>
+                I have participated in numerous classes, jobs, and projects that have enabled me to enhance my knowledge and skills in AutoCAD. My journey with the software began during my freshman year of high school when I enrolled in a basic AutoCAD course that covered
+                fundamental concepts.Throughout my sophomore, junior, and senior years, I consistently pursued related courses, such as Architecture CAD, 3D CAD, and Engineering CAD. Additionally, during my tenure at <a href="#Atlas">Atlas CopCo</a>,
+                I was responsible for reviewing and optimizing machine harness drawings and their respective point-to-point drawings. This experience significantly improved my proficiency in syncing multiple documents and routing machine harnesses in
+                AutoCAD.
             </p>
         </div>
 
         <div class="box-item">
-            <h2>Coming Soon</h2>
+            <h1>Senior Design II (Industry Sponsored)</h1>
+            <h2>GE: Industrial Control Systems and Cybersecurity Project</h2>
             <p>
+                [Currently In Progress], In this my team and I are responsible for the research use of blockchain technology for tracking changes to critical infrastructure control systems. Project tasks include Research the components of GE industrial control system,
+                Research blockchain technologies useful in capturing data and storing changes, Build proof of concept showing this functionality with guiding material on how it may be used to improve trust and efficiency in auditability.
+
             </p>
         </div>
 
