--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
 
     <footer>
         <p>Copyright © Bradley Carobus. All Rights Reserved.</p>
+        <p>Last Update February 1st, 2024</p>
     </footer>
 
 </body>
