--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
     <div class="bento-box">
 
         <!-- This is a regular single column item -->
-        <div class="box-item">
+        <div class="box-item box-item--single">
             <img src="headshot.JPG" alt="Profesional headshot">
             <h2>About Me</h2>
             <p>I grew up in the suburbs of Chicago. After high school graduation, my family and I relocated to South Carolina, this prompted my decision to attend Clemson University. Currently pursuing a Bachelor of Science with a major in Electrical Engineering,
-                I am deeply passionate about the design and engineering processes that shape our everyday technology. </p>
+                and I am deeply passionate about the design and engineering processes that shape our everyday technology. </p>
         </div>
 
 
@@ -50,7 +50,7 @@
 
 
         <!-- Another regular single column item -->
-        <div class="box-item" id="clemson">
+        <div class="box-item box-item--single" id="clemson">
             <h2>Clemson University</h2>
             <img src="Clemson_Paw.png" alt="Picture of Clemson Paw">
             <p>-I am currently working on a Bachelor of Science in high level programming and circuit design classes, majoring in Electrical Engineering, graduating in the spring of 2024.
@@ -78,14 +78,14 @@
             </p>
         </div>
 
-        <div class="box-item">
+        <div class="box-item box-item--single">
             <h2>Programming</h2>
             <p>I've been programming for a total of 5+ years and have used many resources to enhance this skill, the programming languages I would say I'm proficent in are C, C#, C++, Python, HTML, CSS, and MatLab. I've take multiple classes at <a href="#clemson">Clemson University</a>                that enhanced my knowledge of these languages, My team and I used MatLab programming in <a href="#design1">Senior Design Project 1</a>. which we also linked with simulink. Furthermore I completed a wide variety of LinkedIn learning classes
                 in multiple programming languages that include; C++, JavaScript, and Python which included libraries that involve machine learning.
             </p>
         </div>
 
-        <div class="box-item" id="AutoCAD">
+        <div class="box-item box-item--single" id="AutoCAD">
             <h2>AutoCAD</h2>
             <p>
                 I have participated in numerous classes, jobs, and projects that have enabled me to enhance my knowledge and skills in AutoCAD. My journey with the software began during my freshman year of high school when I enrolled in a basic AutoCAD course that covered
@@ -95,7 +95,7 @@
             </p>
         </div>
 
-        <div class="box-item">
+        <div class="box-item box-item--single">
             <h1>Senior Design II (Industry Sponsored)</h1>
             <h2>GE: Industrial Control Systems and Cybersecurity Project</h2>
             <p>
@@ -122,12 +122,11 @@
         <h2>
             <a href="https://www.linkedin.com/in/brad-carobus-843b1621b/">LinkedIn</a>
         </h2>
-    </div>
 
-    <footer>
-        <p>Copyright © Bradley Carobus. All Rights Reserved.</p>
         <p>Last Update February 1st, 2024</p>
-    </footer>
+        <p>Copyright © Bradley Carobus. All Rights Reserved.</p>
+        
+    </div>
 
 </body>
 
