--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <div class="box-item box-item--single">
             <img src="headshot.JPG" alt="Profesional headshot">
             <h2>About Me</h2>
-            <p>I grew up in the suburbs of Chicago. After high school graduation, my family and I relocated to South Carolina, this prompted my decision to attend Clemson University. Currently pursuing a Bachelor of Science with a major in Electrical Engineering,
-                and I am deeply passionate about the design and engineering processes that shape our everyday technology. </p>
+            <p>I grew up in the suburbs of Chicago. After high school graduation, my family and I relocated to South Carolina, this prompted my decision to attend Clemson University to pursue a Bachelor of Science with a major in Electrical Engineering.
+                 I was interested in the engineering design that goes into our everyday electronics so that is why I made my decision to go into Electrical Engineering. </p>
         </div>
 
 
@@ -99,8 +99,8 @@
             <h1>Senior Design II (Industry Sponsored)</h1>
             <h2>GE: Industrial Control Systems and Cybersecurity Project</h2>
             <p>
-                [Currently In Progress], In this my team and I are responsible for the research use of blockchain technology for tracking changes to critical infrastructure control systems. Project tasks include Research the components of GE industrial control system,
-                Research blockchain technologies useful in capturing data and storing changes, Build proof of concept showing this functionality with guiding material on how it may be used to improve trust and efficiency in auditability.
+                In this my team and I we're responsible for the research of integrating BlockChain techology with a critical process using GE's Mark VIe controller. We we're tasked with building our own process using GE's PLC and integrating that with BlockChain to record
+                critical information about a process for later record storage. <a href="SeniorDesign2.html">Learn More</a>
 
             </p>
         </div>
@@ -123,7 +123,7 @@
             <a href="https://www.linkedin.com/in/brad-carobus-843b1621b/">LinkedIn</a>
         </h2>
 
-        <p>Last Update February 1st, 2024</p>
+        <p>Last Update May 3rd, 2024</p>
         <p>Copyright © Bradley Carobus. All Rights Reserved.</p>
         
     </div>
